--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
 
         <activity android:name=".ui.post.PostActivity"/>
+        <activity android:name=".ui.comment.CommentsActivity"/>
+
     </application>
 
 </manifest>
